--- a/templates/title.html
+++ b/templates/title.html
@@ -15,42 +15,34 @@
 	{% else %}
 	Hello newbie!
 	{% endif %}
-	That's Campus 2.0
+	That's your department
 	</h1>
 </div>
 <body>
 <div class = nav>
 	{% if current_user.nickname %}
-	<a href = '{{url_for('title')}}'> Главная </a>
-	<a href = '{{url_for('materials')}}'> Материалы </a>
-	<a href = '{{url_for('group')}}'> Групы </a>
-	<a href = '{{url_for('logout')}}'> Выйти с аккаунта </a>
-	{% else %}
+	<a href = '{{url_for('index')}}'> Главная </a>
+	<a href = '{{url_for('post')}}'> Создать пост </a>
 	<a href = '{{url_for('login')}}'> Войти в аккаунт </a>
 	{% endif %}
 </div>
 
 <div class = main>
 <div class = aside>
-	<img src="/static/img/приматик.png" width="100%" height="50%" title=Logo align = "right" id = "primat" onclick="change_image()">
-	<p>
-  	Самые активные пользователи месяца
-  	{% for user in session.query(User).order_by(User.activity.asc()).limit(3).all() %}
-  	 <p>
-  	{{ (user.nickname)}} - {{(user.activity)}}
-  	{% endfor %}
-    </p>
+	Графіки!
+	<p> </p>
+<iframe src="https://jobs.dou.ua/salaries/"> </iframe>
 </div>
 
 <div class = news>
-	{% for post in session.query(Post).order_by((Post.post_id)).limit(5).all() %}
+	{% for post in posts %}
 		<p>
-			{{post}}
+			{{post.body}}
 	{% endfor %}
 
 	{% if current_user %}
 	<p>
-	<a href = '{{url_for("to_post")}}'> Write your post </a>
+	<a href = '{{url_for("post")}}'> Write your post </a>
 	{% endif %}
 </div>
 </div>
